--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .ulRoute {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -8,14 +8,18 @@
 }
 .ulRoute > li {
   flex: auto;
-  background-color: rgba(236, 162, 162, 0.9);
+  background-color: rgba(138, 199, 255, 0.9);
   color: #fff;
   border-radius: 1.5em;
-  padding: 3.5em;
+  padding: 1em;
   text-align: center;
 }
+.transformed{
+  font-size:xx-large;
+
+}
 .transformed:hover {
-   
+   color: red;
   animation: skew 0.2s infinite;
   transform: skew(30deg);
   animation-direction: alternate;
